# geyser

./: .Rbuildignore  .gitignore  .quartoignore  AGENTS.md  DESCRIPTION  DEVELOPER.md  NAMESPACE  README.md  _config.yml  _quarto.yml  app.R  geyserapp.R  guides.md  index.qmd  module.md  publish.md  pyproject.toml  setup.py  shinyapp.R  tutorial_transcript.md
R/: data.R  dataApp.R  datanames.R  datasets.R  datasetsApp.R  gghist.R  gghistApp.R  ggpoint.R  ggpointApp.R  hist.R  histApp.R  rows.R  switch.R  switchApp.R  wrapper.R  wrapperset.R
R_Shiny_Club_20241211_Yandell/: README.md  extract_videos.py  walkthrough.md
callModule/: app.R  appModule.R  callModule.R
docs/: README.md  demo.html  demo_gallery.html  demo_gallery.qmd  demo_shinylive.qmd  gallery.md  geyserShinyPython.qmd  geyserShinyR.qmd  github_actions.md  index.qmd  shinylive_perf.md  slidesPython.qmd
faithful/: app.R
geyser/: README.md  app.R  datanames.py  datasets.py  geyser.py  gghist.py  ggpoint.py  hist.py  io.py  penguin_module.py  retrieveR.py  rows.py  switch.py
inst/: README.md  instREADME.md  setup.ipynb
man/: dataApp.Rd  dataServer.Rd  datanames.Rd  datasetsApp.Rd  datasetsServer.Rd  gghistApp.Rd  gghistServer.Rd  ggpointApp.Rd  ggpointServer.Rd  histApp.Rd  histServer.Rd  rowsApp.Rd  rowsServer.Rd  switchApp.Rd  switchServer.Rd  wrapperApp.Rd  wrapperServer.Rd  wrappersetServer.Rd
modular/: app.R  shinyapp.R
moduleServer/: app.R  moduleServer.R
modules/: appPages.R  gghist.R  ggpoint.R  hist.R  modules.qmd  pages.R  rows.R  rows.qmd
newFaithful/: app.R  functions.R  (+1 more)
(+134 files in other folders)
